--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -20,16 +20,7 @@
     width: 100%;
     height: 70px;
 }
-/* .admin-head {
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 700;
-    font-style: oblique;
-    font-size: 70px;
-    text-transform: uppercase;
-    text-align: center;
-    animation: glow 1.5s infinite alternate ease-in-out;
-    color:darkblue;
-} */
+
 
 .admin-head{
     font-weight: 700;
@@ -40,8 +31,6 @@
     border-collapse:collapse;
     margin: auto;
     width: 80%;
-    /* top: 10%; */
-    /* border: 1px solid gainsboro; */
     box-shadow: 1px 7px 15px gainsboro;
 }
 
@@ -50,17 +39,11 @@
     font-weight: 200;
     font-family: "Poppins",sans-serif;
 }
-
-/* .admin-table tr:nth-child(odd){
-    background-color:#bbdefb;
-} */
-
 .admin-table th{
     padding: 12px;
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    /* background-color: rgb(138, 137, 137); */
     background-color: #023265;
     color: white;
     border-bottom: 1px solid gainsboro;
@@ -150,4 +133,143 @@
 
 .delete-button:hover{
     transform: scale(1.2)
+}
+
+@media screen and (max-width: 768px)
+{
+    .admin-btn{
+        background-color: #023265;
+        color:white;
+        width: 15%;
+        border-radius: 50px;
+        position: relative;
+        right: 15%;
+    }
+    
+    .adminpage-header{
+        display: flex;
+        justify-content: space-between;
+        background-color:darkblue;
+        color: white;
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 1000;
+        width: 80%;
+        height: 50px;
+    }
+    
+    
+    .admin-head{
+        font-weight: 400;
+    }
+    
+    .admin-table{
+        position: relative;
+        border-collapse:collapse;
+        margin: auto;
+        width: 70%;
+        box-shadow: 1px 7px 15px gainsboro;
+    }
+    
+    .admin-table td{
+        font-size: 13px;
+        font-weight: 100;
+        font-family: "Poppins",sans-serif;
+    }
+    .admin-table th{
+        padding: 7px;
+        font-size: 14px;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        background-color: #023265;
+        color: white;
+        border-bottom: 1px solid gainsboro;
+    }
+    
+    .admin-table tbody td{
+        padding: 15px;
+    }
+    
+    .admin-table tbody tr:hover{
+        background:  rgb(221, 220, 220);
+    }
+    
+    .admin-btn:hover{
+        background: rgb(1, 1, 99);
+    }
+    
+    .admin-header-container {
+        display: flex;
+        align-items: center;
+        justify-content:space-between;
+        padding: 10px;
+        margin: auto;
+        width: 60%;
+        border-radius: 3px;
+    }
+    
+    .admin-header {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
+    }
+    
+    .profileadmin {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color:darkblue;
+        padding: 8px 15px;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        color: #fff;
+        font-size: 14px;
+    }
+    
+    .logout-btn {
+        color: white;
+        border: none;
+        padding: 4px 8px;
+        border-radius: 3px;
+        cursor: pointer;
+        transition: 0.3s ease;
+        font-size: 15px;
+        background-color: darkblue;
+    }
+    
+    .logout-btn:hover {
+        transform: scale(1.05);
+    }
+    
+    ::-webkit-scrollbar{
+        display: none;
+    }
+    
+    .adminbutton{
+        width: 100%;
+        background: none;
+        border: none;
+    }
+    
+    .adminbutton:hover{
+        transform: scale(1.2)
+    }
+    
+    .admin-table thead tr .tablerow{
+        height: 50px;
+        background-color: white;
+        color: black;
+        font-size: 25px;
+    }
+    
+    .delete-button{
+        background: none ;
+        border: none;
+    }
+    
+    .delete-button:hover{
+        transform: scale(1.2)
+    }
 }
