--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -273,3 +273,71 @@
         transform: scale(1.2)
     }
 }
+@media screen and (min-width: 375px) and (max-width: 430px) {
+    .users-btn {
+        width: 40%;
+        right: 5%;
+        border-radius: 30px;
+        font-size: 12px;
+    }
+
+    .users-table {
+        width: 95%;
+        top: 8%;
+    }
+
+    .users-table th {
+        padding: 7px;
+        font-size: 13px;
+    }
+
+    .users-table td {
+        font-size: 12px;
+    }
+
+    .users-table tbody td {
+        padding: 10px;
+    }
+
+    .edit-btn,
+    .delete-btn {
+        font-size: 15px;
+    }
+
+    .toggle {
+        height: 40px;
+    }
+
+    .admin-header-container {
+        width: 95%;
+        padding: 5px;
+    }
+
+    .admin-head {
+        font-size: 15px;
+        margin-left: 10px;
+    }
+
+    .admin-header {
+        display: block; 
+        gap: 0; 
+    }
+
+    .upload-button3,
+    .upload-button4 {
+        font-size: 12px;
+        padding: 5px 10px;
+        margin-top: 5px;
+    }
+
+    .upload-button3 svg,
+    .upload-button4 svg {
+        font-size: 15px;
+    }
+
+    .file-label {
+        font-size: 10px;
+        padding: 7px 9px;
+        border-radius: 3px;
+    }
+}
