--- a/Insurance-app-main/src/Adminpage.css
+++ b/Insurance-app-main/src/Adminpage.css
@@ -2,7 +2,7 @@
 .admin-btn{
     background-color: #023265;
     color:white;
-    width: 18%;
+    width: 30%;
     border-radius: 50px;
     position: relative;
     right: 20%;
@@ -134,16 +134,21 @@
 .delete-button:hover{
     transform: scale(1.2)
 }
+.table-row
+{
+   font-size: 20px;
+   background-color: white;
+}
 
 @media screen and (max-width: 768px)
 {
     .admin-btn{
         background-color: #023265;
         color:white;
-        width: 15%;
-        border-radius: 50px;
+        width: 30%;
+        border-radius: 40px;
         position: relative;
-        right: 15%;
+        right: 10%;
     }
     
     .adminpage-header{
@@ -272,30 +277,35 @@
     .delete-button:hover{
         transform: scale(1.2)
     }
+    .tablerow
+    {
+        font-size: 15px;
+    }
 }
 @media screen and (min-width: 375px) and (max-width: 430px) {
-    .users-btn {
-        width: 40%;
+    .admin-btn {
+        width: 30%;
         right: 5%;
-        border-radius: 30px;
+        border-radius: 25px;
         font-size: 12px;
     }
 
-    .users-table {
-        width: 95%;
+    .admin-table {
+        width: 60%;
         top: 8%;
+        margin-left: 70px;
     }
 
-    .users-table th {
+    .admin-table th {
         padding: 7px;
         font-size: 13px;
     }
 
-    .users-table td {
+    .admin-table td {
         font-size: 12px;
     }
 
-    .users-table tbody td {
+    .admin-table tbody td {
         padding: 10px;
     }
 
@@ -339,5 +349,14 @@
         font-size: 10px;
         padding: 7px 9px;
         border-radius: 3px;
+    }
+
+    .users-table thead tr .tablerow {
+        height: 50px;
+        font-size: 14px;
+    }
+    .tablerow
+    {
+        font-size: 10px;
     }
 }
