--- a/Insurance-app-main/src/Users.css
+++ b/Insurance-app-main/src/Users.css
@@ -172,7 +172,11 @@
     color: black;
     font-size: 25px;
 }
-
+.table-row
+{
+    font-size: 20px;
+    background-color: white;
+}
 
 @media screen and (max-width: 768px) {
     .users-btn {
@@ -182,8 +186,9 @@
     }
 
     .users-table {
-        width: 90%;
+        width: 70%;
         top: 10%;
+       
     }
 
     .admin-header-container {
@@ -203,8 +208,9 @@
     }
 
     .users-table {
-        width: 95%;
+        width: 50%;
         top: 8%;
+        margin-right: 30px;
     }
 
     .users-table th {
