--- a/Insurance-app-main/src/Components/Login/Login.css
+++ b/Insurance-app-main/src/Components/Login/Login.css
@@ -22,8 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* margin-top: 100px; */
-    height: 100% !important;
+   height: 100% !important;
 }
 
 .form-data{
@@ -35,6 +34,7 @@
 
 .button-container{
     display: flex;
+    gap: 15px;
 }
 
 .button-container .button-group{
@@ -53,6 +53,19 @@
     background: linear-gradient(90deg, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     color: white;
 }
+.form-control-login {
+    width: 100%;
+    padding: 8px 11px;
+    font-size: 15px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background-color: rgba(255, 255, 255, 0.9);
+    transition: border 0.3s ease, box-shadow 0.3s ease;
+  }
+  .label
+  {
+    font-size: 30px;
+  }
 
 
 @media screen and (max-width: 1440px) {
@@ -63,48 +76,32 @@
     .button-container .button-group {
         width: 180px;
     }
+    .form-control
+    {
+        height: 35px;
+        font-size: 25px;
+    }
+   
 }
 
 
-@media screen and (max-width: 1024px) {
-    .btn {
-        width: 40%;
-    }
 
-    .form-data {
-        padding: 25px;
-    }
 
-    .button-container .button-group {
-        width: 160px;
-    }
+@media screen and (max-width: 768px){
+.btn {
+    width: 40%;
 }
 
-@media screen and (max-width: 768px) {
-    .login-form {
-        flex-direction: column;
-        padding: 20px;
-    }
-
-    .btn {
-        width: 60%;
-    }
-
-    .form-data {
-        width: 100%;
-        padding: 20px;
-    }
-
-    .button-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .button-container .button-group {
-        width: 100%;
-        margin-bottom: 10px;
-    }
+.form-data {
+    padding: 25px;
 }
+
+.button-container .button-group {
+    width: 160px;
+}
+}
+
+
 
 
 @media screen and (max-width: 425px) {
@@ -125,7 +122,7 @@
 
 @media screen and (max-width: 375px) {
     .btn {
-        width: 90%;
+        width: 95%;
     }
 
     .form-data {
