--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -11,10 +11,11 @@
 .company-header
 {
     display: flex;
+    justify-content: space-between;
     margin-top:100px ;
-    background-color: aqua;
-    color: black;
-
+    background-color:darkblue;
+    color:white;
+    height: 300px;
 }
 .employee-details
 {
@@ -30,6 +31,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color:lightgrey;
+    width: 400px;
 }
 .payslipinput
 {
