--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslip.css
@@ -67,7 +67,7 @@
 }
 
 .payslip-button:hover {
-  background-color: #5a32a3;
+  background-color:rgb(34, 125, 161);
 }
 
 /* Payslip Output Section */
@@ -138,4 +138,9 @@
   display: flex;
   justify-content: space-around;
   margin-top: 20px;
+}
+.pageback-icon
+{
+  font-size: 50px;
+  padding: 10px;
 }
