--- a/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslipuser.css
+++ b/Insurance-app-main/src/Components/AdminDashboard/Payslip/payslipuser.css
@@ -117,11 +117,12 @@
     border-radius: 50%;
   }
   
-  .text-center {
+  .payslip-month {
     text-align: center;
     margin-top: 20px;
     font-size: 18px;
     color: #555;
+    border-bottom: 1px solid #e1e1e1;
   }
   
   .employee-details {
@@ -159,3 +160,27 @@
     justify-content: space-around;
     margin-top: 20px;
   }
+  .pdf-button-download .pdfbutton {
+    display: flex; 
+    align-items: center;
+    background-color: #002f6c;
+    border-radius: 7px;
+    color: white;
+    padding: 10px 16px;
+    gap: 8px;
+    border: none;
+    cursor: pointer;
+    margin-left: 370px;
+  }
+  .pdf-button-download .pdfbutton:hover {
+   background-color: rgb(34, 117, 149)
+  }
+ .pdf-icon
+ {
+    color: red;
+ }
+ .pageback-icon
+ {
+   font-size: 50px;
+   padding: 10px;
+ }
